Fix warnings.